link to detail page

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="sidebar-btn"><span>Filter</span></div>
             <div class="work-compressor-wrapper uk-grid uk-flex uk-grid-collapse uk-flex-wrap" uk-grid>
                 <div class="1 work-compressor-item uk-width-1-2@l uk-width-2-3@m uk-width-1-1@s">
-                    <a href="#">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/PAO-0@2x.jpg" alt="">
@@ -148,7 +148,7 @@
                     </a>
                 </div>
                 <div class="2 work-compressor-item uk-width-1-4@l uk-width-1-3@m uk-width-1-2@s">
-                    <a href="#">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/ECO-0@2x.jpg" alt="">
@@ -166,7 +166,7 @@
                     </a>
                 </div>
                 <div class="3 work-compressor-item uk-width-1-4@l uk-width-1-3@m uk-width-1-2@s">
-                    <a href="">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/KIWI-0@2x.jpg" alt="">
@@ -185,7 +185,7 @@
                     </a>
                 </div>
                 <div class="4 work-compressor-item uk-width-1-4@l uk-width-1-3@m uk-width-1-2@s">
-                    <a href="#">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/FURAMA-0@2x.jpg" alt="">
@@ -202,7 +202,7 @@
                     </a>
                 </div>
                 <div class="5 work-compressor-item uk-width-1-4@l uk-width-1-3@m uk-width-1-2@s">
-                    <a href="">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/WTS-0@2x.jpg" alt="">
@@ -221,7 +221,7 @@
                     </a>
                 </div>
                 <div class="6 work-compressor-item uk-width-1-2@l uk-width-2-3@m uk-width-1-1@s">
-                    <a href="#">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/RTT-0@2x.jpg" alt="">
@@ -240,7 +240,7 @@
                     </a>
                 </div>
                 <div class="7 work-compressor-item uk-width-1-2@l uk-width-2-3@m uk-width-1-1@s">
-                    <a href="#">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/YM-0@2x-1.jpg" alt="">
@@ -259,7 +259,7 @@
                     </a>
                 </div>
                 <div class="8 work-compressor-item uk-width-1-2@l uk-width-2-3@m uk-width-1-1@s">
-                    <a href="#">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/DONKI-0@2x.jpg" alt="">
@@ -277,7 +277,7 @@
                     </a>
                 </div>
                 <div class="9 work-compressor-item uk-width-1-4@l uk-width-1-3@m uk-width-1-2@s">
-                    <a href="">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/TAP-0@2x.jpg" alt="">
@@ -293,7 +293,7 @@
                     </a>
                 </div>
                 <div class="10 work-compressor-item uk-width-1-2@l uk-width-2-3@m uk-width-1-1@s">
-                    <a href="#">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/FWD-0@2x.jpg" alt="">
@@ -311,7 +311,7 @@
                     </a>
                 </div>
                 <div class="11 work-compressor-item uk-width-1-4@l uk-width-1-3@m uk-width-1-2@s">
-                    <a href="">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/ISETAN-0@2x.jpg" alt="">
@@ -330,7 +330,7 @@
                     </a>
                 </div>
                 <div class="12 work-compressor-item uk-width-1-2@l uk-width-2-3@m uk-width-1-1@s">
-                    <a href="#">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/HBO-0@2x-2.jpg" alt="">
@@ -347,7 +347,7 @@
                     </a>
                 </div>
                 <div class="13 work-compressor-item uk-width-1-4@l uk-width-1-3@m uk-width-1-2@s">
-                    <a href="">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/MYR.jpg" alt="">
@@ -364,7 +364,7 @@
                     </a>
                 </div>
                 <div class="14 work-compressor-item uk-width-1-4@l uk-width-1-3@m uk-width-1-2@s">
-                    <a href="">
+                    <a href="single-page.html">
                         <div class="uk-position-relative">
                             <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
                                 <img class="uk-transition-scale-up uk-transition-opaque" src="images/CDG-2-1.jpg" alt="">
